<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
	    android:id="@+id/addressLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_marginTop="5dip"
	    android:layout_marginLeft="10dip"
	    android:text="@string/AddressLabel"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="20sp" />
	 <EditText
	    android:id="@+id/addressText"
	    android:layout_alignLeft="@+id/addressLabel"
		android:layout_alignTop="@+id/addressLabel"
	    android:layout_width="300dp"
	    android:layout_height="55dp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="0dp"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="15sp"
	    android:hint="@string/AddressHint" />
    
	<TextView
	        android:id="@+id/detailsText"
	        android:layout_alignLeft="@+id/addressLabel"
			android:layout_alignTop="@+id/addressLabel"
			android:layout_width="wrap_content"
	    	android:layout_height="match_parent"
	        android:layout_marginTop="90dp"
	        android:layout_marginLeft="0dp"
	        android:text="@string/LabelCurrency"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="20sp" />
	<Button
	    android:id="@+id/btcButton"
	    android:layout_width="50dp"
	    android:layout_height="60dp"
	    android:layout_alignLeft="@+id/addressLabel"
	    android:layout_alignTop="@+id/addressLabel"
	    android:layout_marginLeft="0dp"
	    android:layout_marginTop="110dp"
	    android:text="@string/BTCSign" />
	<Button
	    android:id="@+id/appleButton"
	    android:layout_width="50dp"
	    android:layout_height="60dp"
	    android:layout_alignLeft="@+id/addressLabel"
	    android:layout_alignTop="@+id/addressLabel"
	    android:layout_marginLeft="60dp"
	    android:layout_marginTop="110dp"
	    android:text="@string/AppleSign" />
	<Button
	    android:id="@+id/yuanButton"
	    android:layout_width="50dp"
	    android:layout_height="60dp"
	    android:layout_alignLeft="@+id/addressLabel"
	    android:layout_alignTop="@+id/addressLabel"
	    android:layout_marginLeft="120dp"
	    android:layout_marginTop="110dp"
	    android:text="@string/YuanSign" />
	<Button
	    android:id="@+id/euroButton"
	    android:layout_width="50dp"
	    android:layout_height="60dp"
	    android:layout_alignLeft="@+id/addressLabel"
	    android:layout_alignTop="@+id/addressLabel"
	    android:layout_marginLeft="180dp"
	    android:layout_marginTop="110dp"
	    android:text="@string/EuroSign" />
	<Button
	    android:id="@+id/dollarButton"
	    android:layout_width="50dp"
	    android:layout_height="60dp"
	    android:layout_alignLeft="@+id/addressLabel"
	    android:layout_alignTop="@+id/addressLabel"
	    android:layout_marginLeft="240dp"
	    android:layout_marginTop="110dp"
	    android:text="@string/DollarSign" />
	 <TextView
	    android:id="@+id/currencyText"
	    android:layout_alignLeft="@+id/addressLabel"
		android:layout_alignTop="@+id/addressLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_marginTop="170dip"
	    android:layout_marginLeft="0dip"
	    android:text="@string/CurrencyText"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="15sp" />
	 
	 <TextView
	    android:id="@+id/feeLabel"
	    android:layout_alignLeft="@+id/addressLabel"
		android:layout_alignTop="@+id/addressLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_marginTop="200dip"
	    android:layout_marginLeft="0dip"
	    android:text="@string/FeeLabel"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="20sp" />
	 <EditText
	    android:id="@+id/feeText"
	    android:layout_alignLeft="@+id/addressLabel"
		android:layout_alignTop="@+id/addressLabel"
	    android:layout_width="80dp"
	    android:layout_height="40dp"
	    android:layout_marginTop="225dp"
	    android:layout_marginLeft="0dp"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:inputType="number"
	    android:textSize="15sp"
	    android:hint="@string/FeeHint" />
	 <TextView
	    android:id="@+id/feeCurrency"
	    android:layout_alignLeft="@+id/addressLabel"
		android:layout_alignTop="@+id/addressLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_marginTop="235dp"
	    android:layout_marginLeft="90dp"
	    android:text="@string/FeeCurrency"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="15sp" />
	 
	<TextView
	    android:id="@+id/courtesyLabel"
	    android:layout_alignLeft="@+id/addressLabel"
		android:layout_alignTop="@+id/addressLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_marginTop="280dip"
	    android:layout_marginLeft="0dip"
	    android:text="@string/CourtesyLabel"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="20sp" />
	 <CheckBox
	    android:id="@+id/courtesyCheckBox"
	    android:layout_alignLeft="@+id/addressLabel"
	 	android:layout_alignTop="@+id/addressLabel"
	 	android:layout_marginTop="305dip"
	    android:layout_marginLeft="0dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/CourtesyText" />
	 
	 <Button
	    android:id="@+id/okSettingsButton"
	    android:layout_width="70dp"
	    android:layout_height="50dp"
	    android:layout_alignLeft="@+id/addressLabel"
	    android:layout_alignTop="@+id/addressLabel"
	    android:layout_marginLeft="220dp"
	    android:layout_marginTop="390dp"
	    android:text="@string/OkLabel" />
</RelativeLayout>