<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/LabelPrice"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />
    
    <EditText
	    android:id="@+id/priceBox"
	    android:layout_alignLeft="@+id/priceText"
		android:layout_alignTop="@+id/priceText"
	    android:layout_width="240dp"
	    android:layout_height="80dp"
	    android:layout_marginTop="40dp"
	    android:layout_marginLeft="20dp"
	    android:gravity="center"
	    android:inputType="number"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="30sp"
	    android:hint="@string/PriceHint" />
    
    <TextView
	    android:id="@+id/priceCurrency"
	    android:layout_alignLeft="@+id/priceText"
		android:layout_alignTop="@+id/priceText"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_marginTop="140dp"
	    android:layout_marginLeft="130dip"
	    android:text="@string/FeeCurrency"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="20sp" />
    
    <Button
	    android:id="@+id/okPriceButton"
	    android:layout_width="100dp"
	    android:layout_height="60dp"
	    android:layout_alignLeft="@+id/priceText"
	    android:layout_alignTop="@+id/priceText"
	    android:layout_marginLeft="95dp"
	    android:layout_marginTop="180dp"
	    android:text="@string/OkLabel" />
    
</RelativeLayout>
